feat: create batch users
