# swagger.json
@@ -4092,6 +4092,12 @@
                             ]
                           }
                         },
+                        "associatedCompanyGroupId": {
+                          "nullable": true,
+                          "type": "string",
+                          "format": "cuid",
+                          "pattern": "^[cC][^\\s-]{8,}$"
+                        },
                         "createdAt": {
                           "type": "string",
                           "format": "date-time"
@@ -4104,6 +4110,7 @@
                         "avatarUrl",
                         "birthDate",
                         "roles",
+                        "associatedCompanyGroupId",
                         "createdAt"
                       ],
                       "additionalProperties": false
@@ -4333,6 +4340,117 @@
         },
         "responses": {
           "201": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "id"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/batch": {
+      "post": {
+        "operationId": "createBatchUsers",
+        "summary": "Create batch users",
+        "tags": [
+          "User"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "users": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "name": {
+                          "type": "string"
+                        },
+                        "document": {
+                          "type": "string"
+                        },
+                        "birthDate": {
+                          "type": "string"
+                        },
+                        "roles": {
+                          "type": "array",
+                          "items": {
+                            "type": "string",
+                            "enum": [
+                              "ADMIN",
+                              "COMPANY_GROUP_ADMIN",
+                              "MEMBER"
+                            ]
+                          }
+                        },
+                        "companyGroupId": {
+                          "type": "string",
+                          "format": "cuid",
+                          "pattern": "^[cC][^\\s-]{8,}$"
+                        },
+                        "companiesIds": {
+                          "default": [],
+                          "type": "array",
+                          "items": {
+                            "type": "string",
+                            "format": "cuid",
+                            "pattern": "^[cC][^\\s-]{8,}$"
+                          }
+                        },
+                        "unitsIds": {
+                          "default": [],
+                          "type": "array",
+                          "items": {
+                            "type": "string",
+                            "format": "cuid",
+                            "pattern": "^[cC][^\\s-]{8,}$"
+                          }
+                        },
+                        "basesIds": {
+                          "default": [],
+                          "type": "array",
+                          "items": {
+                            "type": "string",
+                            "format": "cuid",
+                            "pattern": "^[cC][^\\s-]{8,}$"
+                          }
+                        }
+                      },
+                      "required": [
+                        "name",
+                        "document",
+                        "birthDate",
+                        "roles"
+                      ]
+                    }
+                  }
+                },
+                "required": [
+                  "users"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "202": {
             "description": "Default Response",
             "content": {
               "application/json": {
